# gviewer

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
gviewer/: CMakeLists.txt  resource_gviewer.qrc
gviewer/include/: gattributes.h  gedge.h  gedgeproperties.h  ggraph.h  gnode.h  gnodeproperties.h  gsceneevents.h  sceneproperties.h  viewproperties.h
gviewer/resource/css/: style.css
gviewer/tools/converters/: graphmlconverter.cpp  graphmlconverter.h  jsonconverter.cpp  jsonconverter.h
gviewer/tools/transformations/: randomlayouttransformation.cpp  randomlayouttransformation.h
gviewer/view/: gview.cpp  gview.h  gview.ui  gviewgraph.cpp  gviewgraph.h  gviewgraph.ui  gviewgraphscene.cpp  gviewgraphscene.h  gviewlabdata.cpp  gviewlabdata.h  gviewlabdata.ui
gviewer/view/elements/: colorpicker.cpp  colorpicker.h  colorpicker.ui
gviewer/view/panels/: commonscenetools.cpp  commonscenetools.h
gviewer/view/scence/: scenemodetoolbar.cpp  scenemodetoolbar.h  scenepropertiestoolbar.cpp  scenepropertiestoolbar.h
gviewer/view/scence/items/: graphicsedgeitem.cpp  graphicsedgeitem.h  graphicsnodeitem.cpp  graphicsnodeitem.h
gviewer/view/scence/items/selectors/: areaselectoritem.cpp  areaselectoritem.h
